tolk-tester/tests/invalid-declaration/err-1043.tolk
get id() { return 123; }

/**
@compilation_should_fail
@stderr expected `fun`, got `id`
 */
